objects/QIDC__Refresh_My_OneKey_Statistics_ims__c.object
<CustomObject>
    <description>Contains statistics of refresh my onekey job. This will be used by queue job only.</description>
    <fields>
        <fullName>QIDC__Additional_Statistics_ims__c</fullName>
        <description>Additional statistics data is stored here which can be used for other reporting.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Statistics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__CodeBase_ims__c</fullName>
        <description>This field is used to store CodeBase value of a job.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store CodeBase value of a job.</inlineHelpText>
        <label>Code Base</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>Country code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Country code</inlineHelpText>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__From_Date_ims__c</fullName>
        <description>Start date of latest refresh my Onekey download job.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start date of latest refresh my Onekey download job.</inlineHelpText>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_Id_ims__c</fullName>
        <description>Job Id of the refresh my onekey job</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Job Id of the refresh my onekey job</inlineHelpText>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_Start_Date_ims__c</fullName>
        <description>Job start date time of the refresh my onekey job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Job start date time of the refresh my onekey job</inlineHelpText>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Number_Of_Records_Errored_ims__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Failed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Number_Of_Records_Processed_ims__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of records processed in this transaction</description>
        <inlineHelpText>Number of records processed in this transaction</inlineHelpText>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Relation_Statistics_Status_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Statistics Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>Status of Refresh my onekey job.</description>
        <inlineHelpText>Status of Refresh my onekey job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__To_Date_ims__c</fullName>
        <description>&quot;To&quot; datetime of current job. This will be null if no jobs are running.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>&quot;To&quot; datetime of current job. This will be null if no jobs are running.</inlineHelpText>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <label>Refresh My OneKey Statistics</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Number_Of_Records_Errored_ims__c</columns>
        <columns>QIDC__From_Date_ims__c</columns>
        <columns>QIDC__Job_Id_ims__c</columns>
        <columns>QIDC__Number_Of_Records_Processed_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__To_Date_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Refresh My OneKey Statitistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refresh My OneKey Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>